--- a/ChangeLog
+++ b/ChangeLog
@@ -441,6 +441,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * okno wyboru pliku w konfiguracji modu³ów sound, ext_sound, speech nie powoduje
   wyzucenie na wierzch g³ównego okna kadu (joi)
 * poprawione kolorowanie opisów pod kontaktami (joi)
+* poprawione pozycjonowanie animowanych emotikon / obrazków (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
