--- a/ChangeLog
+++ b/ChangeLog
@@ -442,6 +442,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   wyzucenie na wierzch g³ównego okna kadu (joi)
 * poprawione kolorowanie opisów pod kontaktami (joi)
 * poprawione pozycjonowanie animowanych emotikon / obrazków (joi)
+* optymalizacje, m. in. mened¿era ikon i od¶wie¿ania listy kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
