--- a/ChangeLog
+++ b/ChangeLog
@@ -439,10 +439,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * optymalizacje: otwarcie i zapis pliku konfiguracyjnego, ekspansja emotikon,
   wy¶wietlanie opisów pod kontaktami (joi)
 * okno wyboru pliku w konfiguracji modu³ów sound, ext_sound, speech nie powoduje
-  wyzucenie na wierzch g³ównego okna kadu (joi)
+  wyrzucenie na wierzch g³ównego okna kadu (joi)
 * poprawione kolorowanie opisów pod kontaktami (joi)
 * poprawione pozycjonowanie animowanych emotikon / obrazków (joi)
 * optymalizacje, m. in. mened¿era ikon i od¶wie¿ania listy kontaktów (joi)
+* encryption: przyjmowanie klucza nie zale¿y od w³±czenia opcji "U¿ywaj szyfrowania" (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
