--- a/ChangeLog
+++ b/ChangeLog
@@ -444,6 +444,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione pozycjonowanie animowanych emotikon / obrazków (joi)
 * optymalizacje, m. in. mened¿era ikon i od¶wie¿ania listy kontaktów (joi)
 * encryption: przyjmowanie klucza nie zale¿y od w³±czenia opcji "U¿ywaj szyfrowania" (joi)
+* kolejne optymalizacje w obs³udze listy kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
