--- a/ChangeLog
+++ b/ChangeLog
@@ -445,6 +445,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * optymalizacje, m. in. mened¿era ikon i od¶wie¿ania listy kontaktów (joi)
 * encryption: przyjmowanie klucza nie zale¿y od w³±czenia opcji "U¿ywaj szyfrowania" (joi)
 * kolejne optymalizacje w obs³udze listy kontaktów (joi)
+* jeszcze lepsze pozycjonowanie emotikon (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
