--- a/ChangeLog
+++ b/ChangeLog
@@ -446,6 +446,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * encryption: przyjmowanie klucza nie zale¿y od w³±czenia opcji "U¿ywaj szyfrowania" (joi)
 * kolejne optymalizacje w obs³udze listy kontaktów (joi)
 * jeszcze lepsze pozycjonowanie emotikon (joi)
+* dodano dokumentacje w plikach about.h i chat.h (format doxygena) (pawel_p)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
