poprawki związane z blokowaniem się modułów dźwiękowych API rozszerzone o wybór rodzaju otwieranych urządzeń - do nagrywania, odtwarzania, fulldupleksu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3070 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -449,6 +449,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodano dokumentacje w plikach about.h i chat.h (format doxygena) (pawel_p)
 * poprawione ³±czenie siê z sewerem - timeouty (kadu zbyt wcze¶nie uznawa³o,
   ¿e uda³o siê po³±czyæ) (joi)
+* czê¶æ poprawek zwi±zanych z blokowaniem siê modu³ów d¼wiêkowych (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
