--- a/ChangeLog
+++ b/ChangeLog
@@ -450,6 +450,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione ³±czenie siê z sewerem - timeouty (kadu zbyt wcze¶nie uznawa³o,
   ¿e uda³o siê po³±czyæ) (joi)
 * czê¶æ poprawek zwi±zanych z blokowaniem siê modu³ów d¼wiêkowych (joi)
+* poprawione dodawanie nowego kontaktu (od¶wie¿anie userboksa) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
