--- a/ChangeLog
+++ b/ChangeLog
@@ -452,6 +452,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * czê¶æ poprawek zwi±zanych z blokowaniem siê modu³ów d¼wiêkowych (joi)
 * poprawione dodawanie nowego kontaktu (od¶wie¿anie userboksa) (joi)
 * drobne optymalizacje: obs³uga plików konfiguracyjnych, czcionki (joi)
+* optymalizacje w oknie historii + ma³e optymalizacje rozsiane po ca³ym kadu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
