--- a/ChangeLog
+++ b/ChangeLog
@@ -453,6 +453,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione dodawanie nowego kontaktu (od¶wie¿anie userboksa) (joi)
 * drobne optymalizacje: obs³uga plików konfiguracyjnych, czcionki (joi)
 * optymalizacje w oknie historii + ma³e optymalizacje rozsiane po ca³ym kadu (joi)
+* dodana opcja (domy¶lnie w³±czona) pozostawiaj±ca libgadu decyzjê o porcie,
+  z którym bêdzie ³±czyæ siê kadu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
