--- a/ChangeLog
+++ b/ChangeLog
@@ -455,6 +455,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * optymalizacje w oknie historii + ma³e optymalizacje rozsiane po ca³ym kadu (joi)
 * dodana opcja (domy¶lnie w³±czona) pozostawiaj±ca libgadu decyzjê o porcie,
   z którym bêdzie ³±czyæ siê kadu (joi)
+* dodana mo¿liwo¶æ ustawienia w pliku konfiguracyjnym timeoutu dla po³±czeñ (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
