--- a/ChangeLog
+++ b/ChangeLog
@@ -457,7 +457,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   z którym bêdzie ³±czyæ siê kadu (joi)
 * dodana mo¿liwo¶æ ustawienia w pliku konfiguracyjnym timeoutu dla po³±czeñ (joi)
 * default_sms->bramka idei: obs³uga braku aktywowanej us³ugi,
-  sms: pole podpis wywmagane (joi)
+  sms: pole podpis wywmagane (Shinjin/joi)
+* bramka ery obs³uguje nowy prefix Heyah: 889 (gringo/joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
