--- a/ChangeLog
+++ b/ChangeLog
@@ -457,8 +457,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   z którym bêdzie ³±czyæ siê kadu (joi)
 * dodana mo¿liwo¶æ ustawienia w pliku konfiguracyjnym timeoutu dla po³±czeñ (joi)
 * default_sms->bramka idei: obs³uga braku aktywowanej us³ugi,
-  sms: pole podpis wywmagane (Shinjin/joi)
+  sms: pole podpis wymagane (Shinjin/joi)
 * bramka ery obs³uguje nowy prefix Heyah: 889 (gringo/joi)
+* przy logowaniu nie wysy³amy do serwera informacji o zmianie statusu
+  w przypadku gdy nie musimy obchodziæ b³êdu serwera (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
