--- a/ChangeLog
+++ b/ChangeLog
@@ -461,6 +461,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * bramka ery obs³uguje nowy prefix Heyah: 889 (gringo/joi)
 * przy logowaniu nie wysy³amy do serwera informacji o zmianie statusu
   w przypadku gdy nie musimy obchodziæ b³êdu serwera (joi)
+* poprawka b³êdu: je¿eli zrezygnujemy z ustawienia statusu opisowego,
+  to nie wysy³amy jeszcze raz naszego statusu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
