--- a/ChangeLog
+++ b/ChangeLog
@@ -463,6 +463,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w przypadku gdy nie musimy obchodziæ b³êdu serwera (joi)
 * poprawka b³êdu: je¿eli zrezygnujemy z ustawienia statusu opisowego,
   to nie wysy³amy jeszcze raz naszego statusu (joi)
+* prawid³owa akcja przy wybraniu opcji Powiadom o kontakcie/Blokuj/Niedostêpny
+  dla kontaktu przy zaznaczonej grupie osób (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
