--- a/ChangeLog
+++ b/ChangeLog
@@ -469,6 +469,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki budowania modu³ów: nas_sound (gentoo) i voice (amd64) (joi)
 * dodano dokumentacjê plików userlist.h oraz userinfo.h (googie/pawel_p)
 * poprawki w wykrywaniu ¶cie¿ki do firefoksa na gentoo (joi)
+* dodano dokumentacjê plików tabbar.h oraz userbox.h (googie/pawel_p)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
