--- a/ChangeLog
+++ b/ChangeLog
@@ -471,6 +471,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki w wykrywaniu ¶cie¿ki do firefoksa na gentoo (joi)
 * dodano dokumentacjê plików tabbar.h oraz userbox.h (googie/pawel_p)
 * poprawione testowanie nagrywania (joi)
+* zmniejszenie bufora w alsa_sound, aby voice móg³ nagrywaæ ma³e próbki (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
