--- a/ChangeLog
+++ b/ChangeLog
@@ -472,6 +472,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodano dokumentacjê plików tabbar.h oraz userbox.h (googie/pawel_p)
 * poprawione testowanie nagrywania (joi)
 * zmniejszenie bufora w alsa_sound, aby voice móg³ nagrywaæ ma³e próbki (joi)
+* dodawane kontakty nie powinny pojawiaæ siê ju¿ dwukrotnie (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
