--- a/ChangeLog
+++ b/ChangeLog
@@ -473,6 +473,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione testowanie nagrywania (joi)
 * zmniejszenie bufora w alsa_sound, aby voice móg³ nagrywaæ ma³e próbki (joi)
 * dodawane kontakty nie powinny pojawiaæ siê ju¿ dwukrotnie (joi)
+* skrypt Instaluj: ostrze¿enie je¿eli skrypt nie jest odpalany bezpo¶rednio
+  ze ¼róde³ (SadMephisto/joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
