dodany do autodownloadu moduł miastoplusa_sms
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3119 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -476,6 +476,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * skrypt Instaluj: ostrze¿enie je¿eli skrypt nie jest odpalany bezpo¶rednio
   ze ¼róde³ (SadMephisto/joi)
 * przy zajêtej alsie, alsa_sound nie zablokuje siê (joi)
+* dodany do autodownloadu modu³ miastoplusa_sms,
+  przet³umaczenie opisów w pliku .config na jêzyk polski (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
