--- a/ChangeLog
+++ b/ChangeLog
@@ -478,6 +478,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy zajêtej alsie, alsa_sound nie zablokuje siê (joi)
 * dodany do autodownloadu modu³ miastoplusa_sms,
   przet³umaczenie opisów w pliku .config na jêzyk polski (joi)
+* dodany do autodownloadu modu³ tabs (Ron_K)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
