--- a/ChangeLog
+++ b/ChangeLog
@@ -479,6 +479,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodany do autodownloadu modu³ miastoplusa_sms,
   przet³umaczenie opisów w pliku .config na jêzyk polski (joi)
 * dodany do autodownloadu modu³ tabs (Ron_K)
+* dodany do autodownloadu modu³ led_notify (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
