--- a/ChangeLog
+++ b/ChangeLog
@@ -480,6 +480,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przet³umaczenie opisów w pliku .config na jêzyk polski (joi)
 * dodany do autodownloadu modu³ tabs (Ron_K)
 * dodany do autodownloadu modu³ led_notify (joi)
+* dodano dokumentacje do plikow pending_events.h pending_msgs.h
+  personal_info.h search.h status.h (googie/pawel_p)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
