--- a/ChangeLog
+++ b/ChangeLog
@@ -483,6 +483,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodano dokumentacje do plikow pending_events.h pending_msgs.h
   personal_info.h search.h status.h (googie/pawel_p)
 * numery jako nazwy grup s± zabronione (joi)
+* usuniêty z konfiguracji zbêdny checkbox "Odtwarzaj d¼wiêki w trakcie rozmowy" (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
