--- a/ChangeLog
+++ b/ChangeLog
@@ -486,6 +486,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty z konfiguracji zbêdny checkbox "Odtwarzaj d¼wiêki w trakcie rozmowy" (joi)
 * poprawiony import starych list kontaktów (m.in. wyeksportowanych konnektem) (joi)
 * ró¿ne optymalizacje rozsiane po ca³ym kodzie (joi)
+* dokumentacja pliku modules.h (googie/pawel_p)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
