--- a/ChangeLog
+++ b/ChangeLog
@@ -487,6 +487,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiony import starych list kontaktów (m.in. wyeksportowanych konnektem) (joi)
 * ró¿ne optymalizacje rozsiane po ca³ym kodzie (joi)
 * dokumentacja pliku modules.h (googie/pawel_p)
+* autodownload ignoruje przyrostki wersji kadu, np. dla 0.4.0-cvs, 0.4.0-rcX
+  i 0.4.0 tylko jeden plik .href na serwerze (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
