--- a/ChangeLog
+++ b/ChangeLog
@@ -490,6 +490,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * autodownload ignoruje przyrostki wersji kadu, np. dla 0.4.0-cvs, 0.4.0-rcX
   i 0.4.0 tylko jeden plik .href na serwerze (adrian)
 * kolejna grupa ró¿nych optymalizacji (joi)
+* poprawka segfaulta przy otwieraniu okna historii (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
