--- a/ChangeLog
+++ b/ChangeLog
@@ -491,6 +491,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   i 0.4.0 tylko jeden plik .href na serwerze (adrian)
 * kolejna grupa ró¿nych optymalizacji (joi)
 * poprawka segfaulta przy otwieraniu okna historii (joi)
+* prawdopodobne obej¶cie problemów z uprawnieniami do katalogów tworzonych
+  przy make install (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
