--- a/ChangeLog
+++ b/ChangeLog
@@ -493,6 +493,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka segfaulta przy otwieraniu okna historii (joi)
 * prawdopodobne obej¶cie problemów z uprawnieniami do katalogów tworzonych
   przy make install (joi)
+* przy wywrotce kadu zapisuje backtrace do pliku ~/.gg/kadu.backtrace.data,
+  stare backtrace'y i zachowane t± sam± metod± kopie plików konfiguracyjnych
+  s± kasowane (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
