--- a/ChangeLog
+++ b/ChangeLog
@@ -496,6 +496,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy wywrotce kadu zapisuje backtrace do pliku ~/.gg/kadu.backtrace.data,
   stare backtrace'y i zachowane t± sam± metod± kopie plików konfiguracyjnych
   s± kasowane (joi)
+* poprawionych kilka segfaultów przy zamykaniu rozmowy g³osowej (pawel_p, joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
