--- a/ChangeLog
+++ b/ChangeLog
@@ -497,6 +497,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   stare backtrace'y i zachowane t± sam± metod± kopie plików konfiguracyjnych
   s± kasowane (joi)
 * poprawionych kilka segfaultów przy zamykaniu rozmowy g³osowej (pawel_p, joi)
+* libgsm: poprawka segfaulta na architekturach 64-bitowych (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
