--- a/ChangeLog
+++ b/ChangeLog
@@ -498,6 +498,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   s± kasowane (joi)
 * poprawionych kilka segfaultów przy zamykaniu rozmowy g³osowej (pawel_p, joi)
 * libgsm: poprawka segfaulta na architekturach 64-bitowych (joi)
+* poprawka w tytule okna konferencji - pierwszy kontakt nie pojawia siê podwójnie (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
