--- a/ChangeLog
+++ b/ChangeLog
@@ -499,6 +499,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawionych kilka segfaultów przy zamykaniu rozmowy g³osowej (pawel_p, joi)
 * libgsm: poprawka segfaulta na architekturach 64-bitowych (joi)
 * poprawka w tytule okna konferencji - pierwszy kontakt nie pojawia siê podwójnie (joi)
+* kompatybilno¶æ z Psi: w opisach \r jest zamieniane na \n (i \r\n na \n) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
