--- a/ChangeLog
+++ b/ChangeLog
@@ -500,6 +500,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * libgsm: poprawka segfaulta na architekturach 64-bitowych (joi)
 * poprawka w tytule okna konferencji - pierwszy kontakt nie pojawia siê podwójnie (joi)
 * kompatybilno¶æ z Psi: w opisach \r jest zamieniane na \n (i \r\n na \n) (joi)
+* poprawne zapisywanie listy kontaktów, o których chcemy byæ powiadamiani
+  przy zmianie statusu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
