--- a/ChangeLog
+++ b/ChangeLog
@@ -505,6 +505,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * znaczna poprawa jako¶ci d¼wiêku produkowanego przez modu³ voice (joi)
 * poprawiona wspó³praca alsa_sound z rozmowami g³osowymi,
   usuniête trzaski podczas zwyk³ego odtwarzania (joi)
+* w oknie szukania w katalogu publicznym dwuklik na znalezionym kontakcie
+  powoduje otwarcie okna rozmowy (pan_wojtas/joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
