--- a/ChangeLog
+++ b/ChangeLog
@@ -507,6 +507,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   usuniête trzaski podczas zwyk³ego odtwarzania (joi)
 * w oknie szukania w katalogu publicznym dwuklik na znalezionym kontakcie
   powoduje otwarcie okna rozmowy (pan_wojtas/joi)
+* poprawny eksport listy kontaktów zawieraj±cej polskie znaki (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
