odświeżanie podglądów przy zmianie kolorów - źle podłączone sloty
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3176 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -509,6 +509,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   powoduje otwarcie okna rozmowy (pan_wojtas/joi)
 * poprawny eksport listy kontaktów zawieraj±cej polskie znaki (joi)
 * poprawiony g³upi segfault w voice (joi)
+* w konfiguracji przy zmianie kolorów nie od¶wie¿a³y siê podgl±dy (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
