--- a/ChangeLog
+++ b/ChangeLog
@@ -510,6 +510,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawny eksport listy kontaktów zawieraj±cej polskie znaki (joi)
 * poprawiony g³upi segfault w voice (joi)
 * w konfiguracji przy zmianie kolorów nie od¶wie¿a³y siê podgl±dy (joi)
+* lepsze wykrywanie bibliotek przy configure (nie ma znaczenia rozszerzenie
+  biblioteki na danym systemie) oraz czytelniejsze komunikaty o braku Qt i png (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
