--- a/ChangeLog
+++ b/ChangeLog
@@ -517,6 +517,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   z tym zwi±zane; wykrywanie ciszy na mikrofonie i nie przesy³anie wtedy danych
   przez sieæ; przy braku mo¿liwo¶ci odegrania wszystkich d¼wiêków, co jaki¶ czas
   opuszczane jest kilka ramek (joi)
+* przyspiesznie okna konfiguracji (pawel_p, joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
