ostatnio otwarta "zakładka" w konfiguracji jest zapamiętywana pomiędzy uruchomieniami programu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3188 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -519,6 +519,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   opuszczane jest kilka ramek (joi)
 * przyspiesznie okna konfiguracji (pawel_p, joi)
 * kadu nie zamrozi siê, gdy arts padnie (joi)
+* ostatnio otwarta "zak³adka" w konfiguracji jest zapamiêtywana pomiêdzy
+  uruchomieniami programu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
