--- a/ChangeLog
+++ b/ChangeLog
@@ -521,6 +521,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * kadu nie zamrozi siê, gdy arts padnie (joi)
 * ostatnio otwarta "zak³adka" w konfiguracji jest zapamiêtywana pomiêdzy
   uruchomieniami programu (joi)
+* nie pozwalamy na wys³anie obrazków wiêkszych ni¿ limit rozmówcy (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
