wykrywanie Qt na FBSD
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3191 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -522,6 +522,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ostatnio otwarta "zak³adka" w konfiguracji jest zapamiêtywana pomiêdzy
   uruchomieniami programu (joi)
 * nie pozwalamy na wys³anie obrazków wiêkszych ni¿ limit rozmówcy (joi)
+* poprawne wykrywanie Qt na FreeBSD (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
