--- a/ChangeLog
+++ b/ChangeLog
@@ -523,7 +523,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   uruchomieniami programu (joi)
 * nie pozwalamy na wys³anie obrazków wiêkszych ni¿ limit rozmówcy (joi)
 * poprawne wykrywanie Qt na FreeBSD (joi)
-* usuniêty segfault przy ³adowaniu modu³ów na starcie (joi)
+* usuniêty segfault przy ³adowaniu modu³ów na starcie (przy Qt < 3.2) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
