--- a/ChangeLog
+++ b/ChangeLog
@@ -525,7 +525,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawne wykrywanie Qt na FreeBSD (joi)
 * usuniêty segfault przy ³adowaniu modu³ów na starcie (przy Qt < 3.2) (joi)
 * poprawa b³êdu w obs³udze prekompilowanych nag³ówków, która uniemo¿liwia³a
-  korzystanie z nich przy braku biblioteki execinfo (joi)
+  korzystanie z nich przy braku biblioteki execinfo (na FreeBSD) (joi)
+* katalog z kluczami tworzony jest na starcie modu³u encryption (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
