--- a/ChangeLog
+++ b/ChangeLog
@@ -527,6 +527,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawa b³êdu w obs³udze prekompilowanych nag³ówków, która uniemo¿liwia³a
   korzystanie z nich przy braku biblioteki execinfo (na FreeBSD) (joi)
 * katalog z kluczami tworzony jest na starcie modu³u encryption (joi)
+* zaaplikowana ³atka Prezu do sprawdzania zale¿no¶ci modu³ów na
+  etapie configure (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
