--- a/ChangeLog
+++ b/ChangeLog
@@ -529,6 +529,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * katalog z kluczami tworzony jest na starcie modu³u encryption (joi)
 * zaaplikowana ³atka Prezu do sprawdzania zale¿no¶ci modu³ów na
   etapie configure (adrian)
+* w konfiguracji powiadomieñ nie wy¶wietlamy na li¶cie anonimów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
