--- a/ChangeLog
+++ b/ChangeLog
@@ -530,6 +530,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zaaplikowana ³atka Prezu do sprawdzania zale¿no¶ci modu³ów na
   etapie configure (adrian)
 * w konfiguracji powiadomieñ nie wy¶wietlamy na li¶cie anonimów (joi)
+* dodana mo¿liwo¶æ przechwycenia zdarzenia zmiany "zak³adki" w konfiguracji (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
