--- a/ChangeLog
+++ b/ChangeLog
@@ -533,6 +533,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodana mo¿liwo¶æ przechwycenia zdarzenia zmiany "zak³adki" w konfiguracji (joi)
 * wybór jêzyka francuskiego w config_wizard jest zapisywany w konfiguracji (dorr/Ron_K)
 * upgrade libgadu do wersji 20050408 (adrian)
+* gdy wysy³amy obrazek, a limit którego¶ z rozmówców na niego nie pozwala,
+  to pytamy siê czy aby na pewno chce siê przes³aæ obrazek, który mo¿e nie doj¶æ (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
