--- a/ChangeLog
+++ b/ChangeLog
@@ -535,6 +535,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * upgrade libgadu do wersji 20050408 (adrian)
 * gdy wysy³amy obrazek, a limit którego¶ z rozmówców na niego nie pozwala,
   to pytamy siê czy aby na pewno chce siê przes³aæ obrazek, który mo¿e nie doj¶æ (joi)
+* dzia³aj±ce obrazki w trakcie konferencji (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
