--- a/ChangeLog
+++ b/ChangeLog
@@ -536,6 +536,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * gdy wysy³amy obrazek, a limit którego¶ z rozmówców na niego nie pozwala,
   to pytamy siê czy aby na pewno chce siê przes³aæ obrazek, który mo¿e nie doj¶æ (joi)
 * dzia³aj±ce obrazki w trakcie konferencji (joi)
+* nowy mechanizm przypominania has³a (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
