--- a/ChangeLog
+++ b/ChangeLog
@@ -537,6 +537,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   to pytamy siê czy aby na pewno chce siê przes³aæ obrazek, który mo¿e nie doj¶æ (joi)
 * dzia³aj±ce obrazki w trakcie konferencji (joi)
 * nowy mechanizm przypominania has³a (adrian)
+* poprawione dzia³anie skryptu Instaluj, aby poprawnie dzia³a³ na FreeBSD
+  potrzebny jest programik devel/cdialog (dialog jest za stary) (pawel_p)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
