--- a/ChangeLog
+++ b/ChangeLog
@@ -539,6 +539,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowy mechanizm przypominania has³a (adrian)
 * poprawione dzia³anie skryptu Instaluj, aby poprawnie dzia³a³ na FreeBSD
   potrzebny jest programik devel/cdialog (dialog jest za stary) (pawel_p)
+* poprawka segfaulta przy czyszczeniu okna rozmowy dla QT<3.2 (pawel_p)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
