--- a/ChangeLog
+++ b/ChangeLog
@@ -541,6 +541,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   potrzebny jest programik devel/cdialog (dialog jest za stary) (pawel_p)
 * poprawka segfaulta przy czyszczeniu okna rozmowy dla QT<3.2 (pawel_p)
 * poprawka segfaulta przy zmianie altnicka (pawel_p)
+* poprawione od¶wie¿anie wyników wyszukiwania w katalogu publicznym przy
+  maksymalizacji okna (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
