--- a/ChangeLog
+++ b/ChangeLog
@@ -543,6 +543,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka segfaulta przy zmianie altnicka (pawel_p)
 * poprawione od¶wie¿anie wyników wyszukiwania w katalogu publicznym przy
   maksymalizacji okna (joi)
+* encryption: poprawione dekodowanie d³ugich wiadomo¶ci (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
