wyciek przy nieudanej próbie załadowania modułu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3243 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
 +++ wersja 0.4.1
+* usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
