zapis listy kontaktow do kadu.conf.xml
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3286 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * klasa do obslugi xml-owego pliku konfiguracyjnego, odczyt kadu.conf.xml podczas startu,
   zapis podczas zamykania kadu, atrybuty last_save_time i last_save_version (adrian)
 * mo¿liwo¶c wyboru przegl±darki Safari (Dorregaray/michal)
+* ka¿dy zapis listy kontaktów do plików userlist i userattribs powoduje
+  równie¿ zapisanie listy kontaktów do kadu.conf.xml (adrian)
 
 +++ wersja 0.4.1
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
