migracja listy kontaktow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3304 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodanie do "Zarz±dcy modu³ów" kolumny "Wersja", obs³uga pola "Version"
   w plikach .desc modu³ów (FuKu/joi)
 * usuniêty segfault przy zakañczaniu rozmowy g³osowej (joi)
+* modu³ migration migruje listê kontaktów do pliku kadu.conf.xml (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
