migracja ignorowanych do xml
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3308 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty segfault przy zakañczaniu rozmowy g³osowej (joi)
 * modu³ migration migruje listê kontaktów do pliku kadu.conf.xml (adrian)
 * pliki userlist i userattribs nie s± ju¿ u¿ywane - lista kontaktów w kadu.conf.xml (adrian)
+* modu³ migration migruje listê ignorowanych do pliku kadu.conf.xml (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
