zapis listy ignorowanych do kadu.conf.xml
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3311 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * pliki userlist i userattribs nie s± ju¿ u¿ywane - lista kontaktów w kadu.conf.xml (adrian)
 * modu³ migration migruje listê ignorowanych do pliku kadu.conf.xml (adrian)
 * lista ignorowanych jest wczytywana z kadu.conf.xml (adrian)
+* lista ignorowanych zapisywana do kadu.conf.xml - plik ignored ju¿ nie u¿ywany (adrian)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
