GPL -> GPL v2 lub nowsza, w całym kodzie tak jest, więc niech i tutaj będzie
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@3317 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/README
+++ b/README
@@ -31,7 +31,7 @@ Kadu, klient Gadu-Gadu dla Qt
  * wiele innych...
 
 +++ LICENCJA
-GPL
+GPL v2 lub nowsza
 
 +++ AUTORZY
 "Kadu Team" szczegó³y w pliku AUTHORS
