poprawka dla proxy w HttpClient
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/branches/0.4@3324 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêty wyciek pamiêci w module speech (joi)
 * usuniêty segfault przy zakañczaniu rozmowy g³osowej (joi)
 * dodany do autodownloadu modu³ osdhints_notify (joi)
+* poprawka dla proxy w HttpClient (michal)
 
 +++ wersja 0.4.0 (16.04.2005)
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
